force-app/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    <recordTypes>
        <fullName>Carrier</fullName>
        <active>true</active>
        <description>Carrier company — has DOT/MC#, SCAC, insurance, equipment fleet info</description>
        <label>Carrier</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Partner</fullName>
        <active>true</active>
        <description>Shipper, receiver, or both — companies that tender or receive freight</description>
        <label>Business Partner</label>
    </recordTypes>
</CustomObject>