force-app/main/default/objects/Account/fields/DOT_Number__c.field-meta.xml
<CustomField>
    <fullName>DOT_Number__c</fullName>
    <description>USDOT number (carriers only)</description>
    <label>DOT Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>