force-app/main/default/objects/Account/fields/Is_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Is_Carrier__c</fullName>
    <description>True if this account is a freight carrier (has DOT/MC, moves loads)</description>
    <defaultValue>false</defaultValue>
    <label>Is Carrier</label>
    <type>Checkbox</type>
</CustomField>