force-app/main/default/objects/Account/fields/Is_Receiver__c.field-meta.xml
<CustomField>
    <fullName>Is_Receiver__c</fullName>
    <description>True if this account receives freight deliveries</description>
    <defaultValue>false</defaultValue>
    <label>Is Receiver</label>
    <type>Checkbox</type>
</CustomField>