force-app/main/default/objects/Account/fields/Is_Shipper__c.field-meta.xml
<CustomField>
    <fullName>Is_Shipper__c</fullName>
    <description>True if this account tenders freight to KWB as a shipper</description>
    <defaultValue>false</defaultValue>
    <label>Is Shipper</label>
    <type>Checkbox</type>
</CustomField>