force-app/main/default/objects/Account/fields/MC_Number__c.field-meta.xml
<CustomField>
    <fullName>MC_Number__c</fullName>
    <description>Motor Carrier (MC) number issued by FMCSA (carriers only)</description>
    <label>MC Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>