force-app/main/default/objects/Account/fields/SCAC_Code__c.field-meta.xml
<CustomField>
    <fullName>SCAC_Code__c</fullName>
    <description>Standard Carrier Alpha Code — 2-4 character carrier identifier</description>
    <label>SCAC Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>